[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "precise"
version = "1.0.0"
description = "Online (incremental) covariance and correlation estimation — the online complement to sklearn.covariance"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Peter Cotton", email = "peter.cotton@microprediction.com" }]
keywords = [
    "covariance",
    "correlation",
    "online",
    "incremental",
    "streaming",
    "precision-matrix",
    "ledoit-wolf",
    "shrinkage",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
# numpy is the only hard dependency. Every shipped estimator runs on numpy alone.
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]                                  # DataFrame output for the keyed adapters
skaters = ["skaters>=0.1"]                                # univariate vol models for ConditionalCovariance (from_skater)
research = ["randomcov>=0.1", "pandas>=1.3"]              # benchmark bake-offs in research/ (not shipped)
dev = ["pytest>=7", "ruff>=0.4", "black>=24.0", "mypy>=1.8", "pandas>=1.3", "build", "scikit-learn>=1.1"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]

[project.urls]
Homepage = "https://github.com/microprediction/precise"
Documentation = "https://microprediction.github.io/precise/"
Repository = "https://github.com/microprediction/precise"

[tool.hatch.build.targets.wheel]
packages = ["precise"]

[tool.hatch.build.targets.sdist]
# Ship only the package and its metadata; research/, papers/, tests/, docs/ stay out of the sdist.
include = ["precise", "README.md", "LICENSE"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E741"]  # ambiguous variable names (i, l) are fine in math code

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q"]
